--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-native-securerandom": "1.0.1",
     "react-native-ssl-public-key-pinning": "^1.1.3",
     "react-native-svg": "~13.14.0",
+    "react-native-testfairy": "^2.62.0",
     "react-native-toast-notifications": "~3.4.0",
     "react-native-use-keyboard": "^1.0.0",
     "react-native-vision-camera": "3.6.16",
