--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-native-device-detection": "~0.2.1",
     "react-native-device-info": "~10.11.0",
     "react-native-dotenv": "^3.4.9",
+    "react-native-embrace": "^3.16.0",
     "react-native-encrypted-storage": "~4.0.3",
     "react-native-keychain": "~8.1.2",
     "react-native-linear-gradient": "~2.8.3",
@@ -89,7 +90,6 @@
     "react-native-securerandom": "1.0.1",
     "react-native-ssl-public-key-pinning": "^1.1.3",
     "react-native-svg": "~13.14.0",
-    "react-native-testfairy": "^2.62.0",
     "react-native-toast-notifications": "~3.4.0",
     "react-native-use-keyboard": "^1.0.0",
     "react-native-vision-camera": "3.6.16",
