--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "react-native-bars": "^2.3.0",
     "react-native-biometrics": "~3.0.1",
     "react-native-blur-effect": "~1.1.3",
-    "react-native-bootsplash": "~5.0.4",
+    "react-native-bootsplash": "5.1.4",
     "react-native-config": "^1.5.1",
     "react-native-countdown-circle-timer": "~3.2.1",
     "react-native-crypto": "^2.2.0",
