--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "react-native-encrypted-storage": "~4.0.3",
     "react-native-keychain": "~8.1.2",
     "react-native-linear-gradient": "~2.8.3",
-    "react-native-nfc-manager": "~3.14.11",
+    "react-native-nfc-manager": "3.14.12",
     "react-native-progress": "~5.0.1",
     "react-native-qrcode-styled": "^0.2.1",
     "react-native-safe-area-context": "~4.7.2",
