--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-  ignore = "[[ $(! git describe --exact-match --tags HEAD) ]] || [[ $PULL_REQUEST == "true" ]]"
+  ignore = "[[ $(! git describe --exact-match --tags HEAD) ]] || [[ $PULL_REQUEST == true ]]"
