--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -102,6 +102,10 @@ workflows:
         script: |
           zip -r ios_symbols.zip ios/*.xcarchive/dSYMs/*.dSYM
           ./scripts/upload-to-testfairy.sh ios/export/SwissBitcoinPay.ipa ios_symbols.zip
+    cache:
+      cache_paths:
+        - $CM_BUILD_DIR/node_modules
+        - $HOME/Library/Caches/CocoaPods
     publishing:
       email:
         recipients:
