--- a/ios/SwissBitcoinPay/SwissBitcoinPay.entitlements
+++ b/ios/SwissBitcoinPay/SwissBitcoinPay.entitlements
@@ -4,6 +4,7 @@
 <dict>
 	<key>com.apple.developer.nfc.readersession.formats</key>
 	<array>
+		<string>NDEF</string>
 		<string>TAG</string>
 	</array>
 	<key>com.apple.developer.associated-domains</key>
@@ -11,8 +12,6 @@
 		<string>applinks:app.swiss-bitcoin-pay.ch</string>
 	</array>
 	<key>com.apple.developer.device-information.user-assigned-device-name</key>
-	<array>
-		<Boolean>true</Boolean>
-	</array>
+	<true/>
 </dict>
 </plist>
