--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
+      android:largeHeap="true"
+      android:hardwareAccelerated="true"
       android:theme="@style/AppTheme">
       <activity
         android:name=".MainActivity"
