--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@fortawesome/react-native-fontawesome": "0.3.0",
     "@lottiefiles/react-lottie-player": "3.5.3",
-    "@os-team/i18next-react-native-language-detector": "1.0.29",
-    "@react-native-async-storage/async-storage": "1.19.3",
-    "@react-native-clipboard/clipboard": "1.12.1",
-    "@react-native-community/checkbox": "0.5.16",
+    "@os-team/i18next-react-native-language-detector": "1.0.31",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-clipboard/clipboard": "1.13.2",
+    "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.0",
     "@react-native-picker/picker": "2.6.1",
     "@react-native/metro-config": "0.73.2",
@@ -52,7 +52,7 @@
     "js-encoding-utils": "0.7.3",
     "js-lnurl": "0.6.0",
     "locale-currency": "0.0.2",
-    "lottie-react-native": "6.4.1",
+    "lottie-react-native": "6.5.1",
     "lottie-web": "5.12.2",
     "node-libs-react-native": "1.2.1",
     "patch-package": "8.0.0",
@@ -77,7 +77,6 @@
     "react-native-linear-gradient": "2.8.3",
     "react-native-nfc-manager": "3.14.12",
     "react-native-progress": "5.0.1",
-    "react-native-qrcode-styled": "0.2.1",
     "react-native-safe-area-context": "4.7.2",
     "react-native-screenshot-prevent": "1.1.9",
     "react-native-securerandom": "1.0.1",
@@ -89,6 +88,7 @@
     "react-native-web": "0.19.9",
     "react-native-web-linear-gradient": "1.1.2",
     "react-native-webview": "13.6.4",
+    "react-qr-code": "^2.0.12",
     "react-refresh": "0.14.0",
     "react-router-dom": "6.17.0",
     "react-router-native": "6.17.0",
