--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-native-keychain": "8.1.2",
     "react-native-linear-gradient": "2.8.3",
     "react-native-nfc-manager": "3.14.12",
+    "react-native-picker-select": "9.0.1",
     "react-native-progress": "5.0.1",
     "react-native-safe-area-context": "4.7.2",
     "react-native-screenshot-prevent": "1.1.9",
