--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
       android:largeHeap="true"
       android:hardwareAccelerated="true"
       android:theme="@style/AppTheme">
+      <profileable android:shell="true" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
