--- a/package.json
+++ b/package.json
@@ -72,13 +72,15 @@
     "react-native-device-info": "10.11.0",
     "react-native-dotenv": "3.4.9",
     "react-native-encrypted-storage": "4.0.3",
+    "react-native-fast-image": "8.6.3",
     "react-native-keychain": "8.1.2",
     "react-native-linear-gradient": "2.8.3",
     "react-native-nfc-manager": "3.14.12",
     "react-native-picker-select": "9.0.1",
-    "react-native-prevent-screenshot-ios-android": "1.1.0",
     "react-native-progress": "5.0.1",
+    "react-native-qrcode-svg": "6.3.0",
     "react-native-safe-area-context": "4.8.2",
+    "react-native-secure-window": "0.4.0",
     "react-native-securerandom": "1.0.1",
     "react-native-ssl-public-key-pinning": "1.1.3",
     "react-native-svg": "14.1.0",
@@ -88,7 +90,6 @@
     "react-native-web": "0.19.9",
     "react-native-web-linear-gradient": "1.1.2",
     "react-native-webview": "13.6.4",
-    "react-qr-code": "^2.0.12",
     "react-refresh": "0.14.0",
     "react-router-dom": "6.17.0",
     "react-router-native": "6.17.0",
