--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "react-native clean-project-auto"
   },
   "dependencies": {
+    "@bufgix/react-native-secure-window": "^0.1.1",
     "@dotlottie/react-player": "1.6.6",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-brands-svg-icons": "6.4.2",
@@ -80,7 +81,6 @@
     "react-native-progress": "5.0.1",
     "react-native-qrcode-svg": "6.3.0",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-secure-window": "0.4.0",
     "react-native-securerandom": "1.0.1",
     "react-native-ssl-public-key-pinning": "1.1.3",
     "react-native-svg": "14.1.0",
