--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-native-progress": "5.0.1",
     "react-native-qrcode-svg": "6.3.0",
     "react-native-safe-area-context": "4.8.2",
+    "react-native-screenshot-prevent": "1.1.9",
     "react-native-securerandom": "1.0.1",
     "react-native-ssl-public-key-pinning": "1.1.3",
     "react-native-svg": "14.1.0",
