--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "react-native clean-project-auto"
   },
   "dependencies": {
-    "@bufgix/react-native-secure-window": "^0.1.1",
+    "@bufgix/react-native-secure-window": "0.1.1",
     "@dotlottie/react-player": "1.6.6",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-brands-svg-icons": "6.4.2",
@@ -52,7 +52,7 @@
     "js-encoding-utils": "0.7.3",
     "js-lnurl": "0.6.0",
     "locale-currency": "0.0.2",
-    "lottie-react-native": "6.6.0",
+    "lottie-react-native": "6.7.0",
     "lottie-web": "5.12.2",
     "node-libs-react-native": "1.2.1",
     "patch-package": "8.0.0",
