--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clean": "react-native clean-project-auto"
   },
   "dependencies": {
-    "@bufgix/react-native-secure-window": "0.1.1",
+    "@bufgix/react-native-secure-window": "^0.1.1",
     "@dotlottie/react-player": "1.6.6",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-brands-svg-icons": "6.4.2",
@@ -29,7 +29,7 @@
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.0",
     "@react-native-picker/picker": "2.6.1",
-    "@react-native/metro-config": "0.73.5",
+    "@react-native/metro-config": "0.73.3",
     "@react-spring/native": "9.7.3",
     "@react-spring/web": "9.7.3",
     "@yudiel/react-qr-scanner": "1.1.10",
@@ -52,7 +52,7 @@
     "js-encoding-utils": "0.7.3",
     "js-lnurl": "0.6.0",
     "locale-currency": "0.0.2",
-    "lottie-react-native": "6.7.0",
+    "lottie-react-native": "6.6.0",
     "lottie-web": "5.12.2",
     "node-libs-react-native": "1.2.1",
     "patch-package": "8.0.0",
@@ -61,7 +61,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.48.2",
     "react-i18next": "14.0.0",
-    "react-native": "0.73.6",
+    "react-native": "0.73.3",
     "react-native-animated-linear-gradient": "1.3.0",
     "react-native-bars": "2.3.0",
     "react-native-biometrics": "3.0.1",
