--- a/ios/SwissBitcoinPay/Info.plist
+++ b/ios/SwissBitcoinPay/Info.plist
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(MAJOR_VERSION).$(MINOR_VERSION).$(PATCH_VERSION)</string>
+	<string>$(APP_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>$(BUILD_NUMBER)</string>
+	<string>$(APP_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NFCReaderUsageDescription</key>
