--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-router-native": "6.17.0",
     "react-secure-storage": "1.3.2",
     "react-use-websocket": "4.5.0",
+    "rn-barcode-zxing": "0.1.2",
     "stream-browserify": "3.0.0",
     "styled-components": "6.0.9",
     "xpub-converter": "1.0.2"
