--- a/android/build.gradle
+++ b/android/build.gradle
@@ -14,6 +14,9 @@ buildscript {
         google()
         mavenCentral()
     }
+    implementation (project(':react-native-vision-camera')){
+        exclude group: 'com.google.mlkit'
+    }
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
