--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -175,6 +175,10 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation (project(':react-native-vision-camera')){
+        exclude group: 'com.google.mlkit'
+    }
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
