react-native-vision-camera

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -103,7 +103,7 @@ android {
         versionCode generateVersionCode()
         versionName generateVersionName()
         resConfigs "en", "fr", "de", "es", "it", "pt"
-        missingDimensionStrategy 'react-native-camera', 'general'
+        missingDimensionStrategy 'react-native-vision-camera', 'general'
     }
 
     splits {
