--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-i18next": "14.0.0",
     "react-native": "0.73.3",
     "react-native-animated-linear-gradient": "1.3.0",
+    "react-native-barcode-zxing-scan": "1.0.2",
     "react-native-bars": "2.3.0",
     "react-native-biometrics": "3.0.1",
     "react-native-blur-effect": "1.1.3",
@@ -88,7 +89,7 @@
     "react-native-svg": "14.1.0",
     "react-native-toast-notifications": "3.4.0",
     "react-native-use-keyboard": "1.0.0",
-    "react-native-vision-camera": "3.6.16",
+    "react-native-vision-camera": "4.0.1",
     "react-native-web": "0.19.9",
     "react-native-web-linear-gradient": "1.1.2",
     "react-native-webview": "13.6.4",
@@ -97,9 +98,9 @@
     "react-router-native": "6.17.0",
     "react-secure-storage": "1.3.2",
     "react-use-websocket": "4.5.0",
-    "rn-barcode-zxing": "0.1.2",
     "stream-browserify": "3.0.0",
     "styled-components": "6.0.9",
+    "vm-browserify": "1.1.2",
     "xpub-converter": "1.0.2"
   },
   "browserslist": {
