--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -175,6 +175,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+    implementation (project(':react-native-device-info')) {
+        exclude group: 'com.google.android.gms'
+    }
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
