--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-native-device-info": "10.11.0",
     "react-native-dotenv": "3.4.9",
     "react-native-encrypted-storage": "4.0.3",
+    "react-native-error-boundary": "1.2.4",
     "react-native-fast-image": "8.6.3",
     "react-native-keychain": "8.1.2",
     "react-native-linear-gradient": "2.8.3",
