--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "react-native run-ios",
     "bundle:android": "react-native bundle --minify --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/",
     "bundle:ios": "react-native bundle --minify --platform ios --entry-file index.js --bundle-output ios/main.jsbundle --sourcemap-output ios/main.jsbundle.map --assets-dest ./ios",
-    "build": "NODE_ENV=production webpack --mode=production && rm public/index.html && cp -r public/. build/",
+    "build": "NODE_ENV=production webpack --mode=production && rm public/index.html && cp -r public/. build/ && npx sentry-expo-upload-sourcemaps build",
     "test": "react-scripts test",
     "lint": "eslint ./ && tsc --noemit",
     "eject": "react-scripts eject",
