--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
       android:allowBackup="false"
       android:largeHeap="true"
       android:hardwareAccelerated="true"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:supportsRtl="true">
       <profileable android:shell="true" />
       <activity
         android:name=".MainActivity"
