--- a/ios/SwissBitcoinPay/Info.plist
+++ b/ios/SwissBitcoinPay/Info.plist
@@ -63,7 +63,7 @@
 	<string>BootSplash.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
-		<string>armv7</string>
+		<string>arm64</string>
 	</array>
 	<key>UIRequiresFullScreen</key>
 	<true/>
