--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.0",
     "@react-native-picker/picker": "2.6.1",
-    "@react-native/metro-config": "0.73.3",
     "@react-spring/native": "9.7.3",
     "@react-spring/web": "9.7.3",
     "@sentry/react-native": "5.31.1",
@@ -60,12 +59,12 @@
     "lottie-web": "5.12.2",
     "node-libs-react-native": "1.2.1",
     "patch-package": "8.0.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-device-detect": "2.2.3",
     "react-dom": "18.2.0",
     "react-hook-form": "7.51.3",
     "react-i18next": "14.0.0",
-    "react-native": "0.73.3",
+    "react-native": "0.75.3",
     "react-native-animated-linear-gradient": "1.3.0",
     "react-native-barcode-zxing-scan": "1.0.2",
     "react-native-bars": "2.3.0",
@@ -86,7 +85,7 @@
     "react-native-picker-select": "9.1.3",
     "react-native-progress": "5.0.1",
     "react-native-qrcode-svg": "6.3.0",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "4.11.0",
     "react-native-screenguard": "^0.3.6",
     "react-native-screenshot-prevent": "1.1.9",
     "react-native-securerandom": "1.0.1",
@@ -94,7 +93,7 @@
     "react-native-svg": "14.1.0",
     "react-native-toast-notifications": "3.4.0",
     "react-native-use-keyboard": "1.0.0",
-    "react-native-vision-camera": "4.0.1",
+    "react-native-vision-camera": "4.5.3",
     "react-native-web": "0.19.9",
     "react-native-web-linear-gradient": "1.1.2",
     "react-native-webview": "13.6.4",
@@ -123,6 +122,7 @@
   "engines": {
     "node": ">=18"
   },
+  "packageManager": "yarn@3.6.4",
   "devDependencies": {
     "@babel/core": "7.23.0",
     "@babel/plugin-transform-classes": "7.23.5",
@@ -132,9 +132,10 @@
     "@parvineyvazov/json-translator": "1.10.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
     "@react-native-community/eslint-config": "3.2.0",
-    "@react-native/babel-preset": "0.74.0",
-    "@react-native/eslint-config": "0.73.1",
-    "@react-native/typescript-config": "0.74.0",
+    "@react-native/babel-preset": "0.75.3",
+    "@react-native/eslint-config": "0.75.3",
+    "@react-native/metro-config": "0.75.3",
+    "@react-native/typescript-config": "0.75.3",
     "@tsconfig/react-native": "3.0.2",
     "@types/bcryptjs": "2.4.6",
     "@types/encodeurl": "1.0.0",
