--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "bundle:ios": "react-native bundle --minify --platform ios --entry-file index.js --bundle-output ios/main.jsbundle --sourcemap-output ios/main.jsbundle.map --assets-dest ./ios",
     "build": "NODE_ENV=production webpack --mode=production && rm public/index.html && cp -r public/. build/",
     "test": "react-scripts test",
-    "translate": "json-autotranslate",
     "lint": "eslint ./ && tsc --noemit",
     "eject": "react-scripts eject",
     "postinstall": "patch-package",
@@ -66,7 +65,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.51.3",
     "react-i18next": "14.0.0",
-    "react-native": "0.75.3",
+    "react-native": "0.76.0",
     "react-native-animated-linear-gradient": "1.3.0",
     "react-native-barcode-zxing-scan": "1.0.2",
     "react-native-bars": "2.3.0",
@@ -92,7 +91,7 @@
     "react-native-screenshot-prevent": "1.1.9",
     "react-native-securerandom": "1.0.1",
     "react-native-ssl-public-key-pinning": "1.1.3",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-toast-notifications": "3.4.0",
     "react-native-use-keyboard": "1.0.0",
     "react-native-video": "github:zoriya/react-native-video#feat/web",
@@ -125,19 +124,21 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4",
   "devDependencies": {
-    "@babel/core": "7.23.0",
+    "@babel/core": "7.25.2",
     "@babel/plugin-transform-classes": "7.23.5",
     "@babel/plugin-transform-export-namespace-from": "7.22.11",
-    "@babel/preset-env": "7.23.6",
-    "@babel/runtime": "7.23.1",
+    "@babel/preset-env": "7.25.3",
+    "@babel/runtime": "7.25.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
+    "@react-native-community/cli": "^15.0.0",
+    "@react-native-community/cli-platform-android": "^15.0.0",
+    "@react-native-community/cli-platform-ios": "^15.0.0",
     "@react-native-community/eslint-config": "3.2.0",
-    "@react-native/babel-preset": "0.75.3",
-    "@react-native/eslint-config": "0.75.3",
-    "@react-native/metro-config": "0.75.3",
-    "@react-native/typescript-config": "0.75.3",
+    "@react-native/babel-preset": "0.76.0",
+    "@react-native/eslint-config": "0.76.0",
+    "@react-native/metro-config": "0.76.0",
+    "@react-native/typescript-config": "0.76.0",
     "@tsconfig/react-native": "3.0.2",
     "@types/bcryptjs": "2.4.6",
     "@types/encodeurl": "1.0.0",
@@ -169,7 +170,6 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "html-webpack-plugin": "5.5.3",
     "jest": "29.7.0",
-    "json-autotranslate": "1.14.3",
     "lodash-webpack-plugin": "0.11.6",
     "node-loader": "2.0.0",
     "prettier": "3.0.3",
