--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "babel-plugin-rewrite-require": "1.14.5",
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "6.8.1",
+    "dotenv": "16.4.5",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-babel-module": "5.3.2",
