--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "react-native clean-project-auto"
   },
   "dependencies": {
-    "@bufgix/react-native-secure-window": "^0.1.1",
+    "@bitcoinerlab/secp256k1": "1.1.1",
     "@dotlottie/react-player": "1.6.6",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-brands-svg-icons": "6.6.0",
@@ -42,11 +42,13 @@
     "bech32": "2.0.0",
     "bip322-js": "1.1.0",
     "bip39": "3.1.0",
-    "bip84": "0.2.7",
-    "bitbox-api": "0.6.0",
+    "bip84": "0.2.9",
+    "bitbox-api": "0.7.0",
     "bitcoin-address-validation": "2.2.3",
+    "bitcoinjs-lib": "7.0.0-rc.0",
     "crypto-browserify": "3.12.0",
     "date-fns": "2.30.0",
+    "ecpair": "3.0.0-rc.0",
     "email-validator": "2.0.4",
     "i18next": "23.5.1",
     "i18next-browser-languagedetector": "7.1.0",
@@ -60,6 +62,7 @@
     "lottie-web": "5.12.2",
     "node-libs-react-native": "1.2.1",
     "patch-package": "8.0.0",
+    "query-string": "9.1.1",
     "react": "18.3.1",
     "react-device-detect": "2.2.3",
     "react-dom": "18.2.0",
@@ -78,7 +81,7 @@
     "react-native-device-info": "13.1.0",
     "react-native-dotenv": "3.4.9",
     "react-native-encrypted-storage": "4.0.3",
-    "react-native-error-boundary": "1.2.4",
+    "react-native-error-boundary": "1.2.5",
     "react-native-fast-image": "8.6.3",
     "react-native-keychain": "8.1.2",
     "react-native-linear-gradient": "2.8.3",
@@ -87,7 +90,7 @@
     "react-native-progress": "5.0.1",
     "react-native-qrcode-svg": "6.3.0",
     "react-native-safe-area-context": "4.11.0",
-    "react-native-screenguard": "^0.3.6",
+    "react-native-screenguard": "0.3.6",
     "react-native-screenshot-prevent": "1.1.9",
     "react-native-securerandom": "1.0.1",
     "react-native-ssl-public-key-pinning": "1.1.3",
@@ -96,7 +99,7 @@
     "react-native-use-keyboard": "1.0.0",
     "react-native-video": "github:zoriya/react-native-video#feat/web",
     "react-native-vision-camera": "4.5.3",
-    "react-native-web": "0.19.12",
+    "react-native-web": "0.19.13",
     "react-native-web-linear-gradient": "1.1.2",
     "react-native-webview": "13.6.4",
     "react-refresh": "0.14.0",
@@ -131,9 +134,9 @@
     "@babel/preset-env": "7.25.3",
     "@babel/runtime": "7.25.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
-    "@react-native-community/cli": "^15.0.0",
-    "@react-native-community/cli-platform-android": "^15.0.0",
-    "@react-native-community/cli-platform-ios": "^15.0.0",
+    "@react-native-community/cli": "15.0.0",
+    "@react-native-community/cli-platform-android": "15.0.0",
+    "@react-native-community/cli-platform-ios": "15.0.0",
     "@react-native-community/eslint-config": "3.2.0",
     "@react-native/babel-preset": "0.76.0",
     "@react-native/eslint-config": "0.76.0",
@@ -151,6 +154,7 @@
     "@types/react-native": "0.72.3",
     "@types/react-native-material-ripple": "0.9.4",
     "@types/react-native-svg-animated-linear-gradient": "0.4.1",
+    "@types/react-native-web": "0.19.0",
     "@types/react-test-renderer": "18.0.7",
     "@types/styled-components": "5.1.34",
     "@typescript-eslint/eslint-plugin": "6.7.3",
