--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.0",
     "@react-native-picker/picker": "2.9.0",
+    "@react-native/assets-registry": "0.76.3",
     "@react-spring/native": "9.7.5",
     "@react-spring/web": "9.7.5",
     "@sentry/react-native": "5.31.1",
@@ -94,7 +95,7 @@
     "react-native-screenshot-prevent": "1.1.9",
     "react-native-securerandom": "1.0.1",
     "react-native-ssl-public-key-pinning": "1.2.4",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "15.9.0",
     "react-native-toast-notifications": "3.4.0",
     "react-native-use-keyboard": "1.0.0",
     "react-native-video": "github:zoriya/react-native-video#feat/web",
@@ -142,6 +143,7 @@
     "@react-native/eslint-config": "0.76.1",
     "@react-native/metro-config": "0.76.1",
     "@react-native/typescript-config": "0.76.1",
+    "@svgr/webpack": "8.1.0",
     "@tsconfig/react-native": "3.0.2",
     "@types/bcryptjs": "2.4.6",
     "@types/encodeurl": "1.0.0",
@@ -178,6 +180,7 @@
     "lodash-webpack-plugin": "0.11.6",
     "node-loader": "2.0.0",
     "prettier": "3.0.3",
+    "react-native-svg-transformer": "1.5.0",
     "style-loader": "3.3.3",
     "ts-essentials": "9.4.0",
     "tsconfig-paths-webpack-plugin": "4.1.0",
