--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "clean": "react-native clean-project-auto"
   },
   "dependencies": {
+    "@bistroo/capacitor-plugin-sunmi": "^0.0.7",
     "@bitcoinerlab/secp256k1": "1.1.1",
+    "@capacitor/core": "^6.2.0",
     "@dotlottie/react-player": "1.6.6",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-brands-svg-icons": "6.6.0",
@@ -25,7 +27,9 @@
     "@fortawesome/free-solid-svg-icons": "6.6.0",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@fortawesome/react-native-fontawesome": "0.3.2",
+    "@heasy/react-native-sunmi-printer": "1.8.4",
     "@lottiefiles/react-lottie-player": "3.5.3",
+    "@mitsuharu/react-native-sunmi-printer-library": "2.2.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-clipboard/clipboard": "1.13.2",
     "@react-native-community/checkbox": "0.5.17",
@@ -88,6 +92,7 @@
     "react-native-linear-gradient": "2.8.3",
     "react-native-nfc-manager": "3.14.12",
     "react-native-picker-select": "9.3.1",
+    "react-native-printer-sunmi": "^2.2.0",
     "react-native-progress": "5.0.1",
     "react-native-qrcode-svg": "6.3.0",
     "react-native-safe-area-context": "4.11.0",
