--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-native-keychain": "8.1.2",
     "react-native-linear-gradient": "2.8.3",
     "react-native-nfc-manager": "3.14.12",
+    "react-native-nyx-printer": "github:SwissBitcoinPay/react-native-nyx-printer",
     "react-native-picker-select": "9.3.1",
     "react-native-printer-sunmi": "^2.2.0",
     "react-native-progress": "5.0.1",
@@ -103,7 +104,7 @@
     "react-native-svg": "15.9.0",
     "react-native-toast-notifications": "3.4.0",
     "react-native-use-keyboard": "1.0.0",
-    "react-native-video": "github:zoriya/react-native-video#feat/web",
+    "react-native-video": "6.8.2",
     "react-native-vision-camera": "4.5.3",
     "react-native-web": "0.19.13",
     "react-native-web-linear-gradient": "1.1.2",
