--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE"/>
 
     <queries>
-        <package android:name="woyou.aidlservice.jiuiv5" />
+        <package android:name="net.nyx.printerservice"/>
     </queries>
     <application
       android:name=".MainApplication"
