--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "clean": "react-native clean-project-auto"
   },
   "dependencies": {
-    "@bistroo/capacitor-plugin-sunmi": "^0.0.7",
+    "@bam.tech/react-native-image-resizer": "3.0.11",
     "@bitcoinerlab/secp256k1": "1.1.1",
     "@capacitor/core": "^6.2.0",
     "@dotlottie/react-player": "1.6.6",
@@ -27,9 +27,7 @@
     "@fortawesome/free-solid-svg-icons": "6.6.0",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@fortawesome/react-native-fontawesome": "0.3.2",
-    "@heasy/react-native-sunmi-printer": "1.8.4",
     "@lottiefiles/react-lottie-player": "3.5.3",
-    "@mitsuharu/react-native-sunmi-printer-library": "2.2.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-clipboard/clipboard": "1.13.2",
     "@react-native-community/checkbox": "0.5.17",
@@ -88,12 +86,12 @@
     "react-native-encrypted-storage": "4.0.3",
     "react-native-error-boundary": "1.2.5",
     "react-native-fast-image": "8.6.3",
+    "react-native-fs": "2.20.0",
     "react-native-keychain": "8.1.2",
     "react-native-linear-gradient": "2.8.3",
     "react-native-nfc-manager": "3.14.12",
-    "react-native-nyx-printer": "github:SwissBitcoinPay/react-native-nyx-printer",
+    "react-native-nyx-printer": "github:SwissBitcoinPay/react-native-nyx-printer#b9aaf65",
     "react-native-picker-select": "9.3.1",
-    "react-native-printer-sunmi": "^2.2.0",
     "react-native-progress": "5.0.1",
     "react-native-qrcode-svg": "6.3.0",
     "react-native-safe-area-context": "4.11.0",
