--- a/package.json
+++ b/package.json
@@ -140,6 +140,9 @@
     "@babel/plugin-transform-export-namespace-from": "7.25.9",
     "@babel/preset-env": "7.26.9",
     "@babel/runtime": "7.26.9",
+    "@eslint/compat": "1.2.7",
+    "@eslint/eslintrc": "3.3.0",
+    "@eslint/js": "9.21.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.15",
     "@react-native-community/cli": "15.1.3",
     "@react-native-community/cli-platform-android": "15.1.3",
