--- a/ios/SwissBitcoinPay/Info.plist
+++ b/ios/SwissBitcoinPay/Info.plist
@@ -39,6 +39,8 @@
 	<string>$(PRODUCT_NAME) needs access to FaceID to secure withdrawing funds from your account.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location is never requested.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your Bluetooth to get access hardware wallets nearby.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Poppins-Black.ttf</string>
