--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@fortawesome/react-native-fontawesome": "0.3.2",
+    "@ledgerhq/hw-app-btc": "10.6.0",
+    "@ledgerhq/hw-transport-webhid": "6.30.0",
+    "@ledgerhq/hw-transport-webusb": "^6.29.4",
+    "@ledgerhq/react-native-hid": "6.32.4",
+    "@ledgerhq/react-native-hw-transport-ble": "6.34.0",
     "@lottiefiles/dotlottie-react": "0.13.0",
     "@lottiefiles/react-lottie-player": "3.6.0",
     "@react-native-async-storage/async-storage": "2.1.1",
@@ -59,6 +64,7 @@
     "js-crypto-hmac": "1.0.7",
     "js-encoding-utils": "0.7.3",
     "js-lnurl": "0.6.0",
+    "ledger-bitcoin": "0.2.3",
     "locale-currency": "0.0.4",
     "lottie-react-native": "7.2.2",
     "lottie-web": "5.12.2",
@@ -75,6 +81,7 @@
     "react-native-barcode-zxing-scan": "1.0.2",
     "react-native-bars": "2.4.3",
     "react-native-biometrics": "3.0.1",
+    "react-native-ble-plx": "3.4.0",
     "react-native-bootsplash": "6.3.3",
     "react-native-config": "1.5.5",
     "react-native-countdown-circle-timer": "3.2.1",
