--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@lottiefiles/react-lottie-player": "3.6.0",
     "@react-native-async-storage/async-storage": "2.1.1",
     "@react-native-clipboard/clipboard": "1.16.1",
+    "@react-native-community/blur": "4.4.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.5",
     "@react-native-picker/picker": "2.11.1",
@@ -111,7 +112,7 @@
     "react-native-vision-camera": "4.6.3",
     "react-native-web": "0.19.13",
     "react-native-web-linear-gradient": "1.1.2",
-    "react-native-webview": "13.13.2",
+    "react-native-webview": "13.15.0",
     "react-refresh": "0.16.0",
     "react-router-dom": "7.1.5",
     "react-router-native": "6.29.0",
