Test with disabled keys

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 APP_VERSION=2.5.14
-
 APP_BUILD_NUMBER=446
+
+SECURE_LOCAL_STORAGE_DISABLED_KEYS=UserAgent|ScreenPrint|Plugins|Fonts|LocalStorage|SessionStorage|TimeZone|Language|SystemLanguage|Cookie|Canvas|Hostname
