Fix dev build issue

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "mobile-start": "react-native start --reset-cache",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "bundle:android": "react-native bundle --minify --platform android --entry-file index.js --reset-cache --bundle-output android/app/src/main/assets/index.android.bundle --sourcemap-output android/app/src/main/assets/index.android.bundle.map --assets-dest android/app/src/main/res/",
-    "bundle:ios": "react-native bundle --minify --platform ios --entry-file index.js --reset-cache --bundle-output ios/main.jsbundle --sourcemap-output ios/main.jsbundle.map --assets-dest ./ios",
+    "bundle:android": "react-native bundle --minify --platform android --entry-file index.js --reset-cache --bundle-output android/app/src/main/assets/index.android.bundle --sourcemap-output android/app/src/main/assets/index.android.bundle.map --assets-dest android/app/src/main/res/ --dev $(echo $(if [ \"$DEV\" = 'true' ]; then echo 'true'; else echo 'false'; fi))",
+    "bundle:ios": "react-native bundle --minify --platform ios --entry-file index.js --reset-cache --bundle-output ios/main.jsbundle --sourcemap-output ios/main.jsbundle.map --assets-dest ./ios --dev $(echo $(if [ \"$DEV\" = 'true' ]; then echo 'true'; else echo 'false'; fi))",
     "build": "NODE_ENV=production webpack --mode=production && rm public/index.html && cp -r public/. build/",
     "test": "react-scripts test",
     "lint": "eslint ./ && tsc --noemit",
