--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-spring/web": "9.7.5",
     "@sentry/react-native": "6.17.0",
     "@sentry/webpack-plugin": "3.1.2",
+    "@trezor/connect-web": "^9.6.2",
     "@yudiel/react-qr-scanner": "2.1.0",
     "axios": "1.7.9",
     "bech32": "2.0.0",
@@ -109,7 +110,7 @@
     "react-native-toast-notifications": "3.4.0",
     "react-native-use-keyboard": "1.1.0",
     "react-native-video": "6.10.1",
-    "react-native-vision-camera": "4.6.3",
+    "react-native-vision-camera": "4.7.1",
     "react-native-web": "0.19.13",
     "react-native-web-linear-gradient": "1.1.2",
     "react-native-webview": "13.15.0",
