--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "@react-spring/web": "9.7.5",
     "@sentry/react-native": "6.17.0",
     "@sentry/webpack-plugin": "3.1.2",
-    "@trezor/connect-web": "^9.6.2",
+    "@trezor/connect-web": "9.6.2",
     "@yudiel/react-qr-scanner": "2.1.0",
     "axios": "1.7.9",
     "bech32": "2.0.0",
     "bip322-js": "2.0.0",
     "bip39": "3.1.0",
     "bip84": "0.2.9",
-    "bitbox-api": "0.8.0",
+    "bitbox-api": "0.9.0",
     "bitcoin-address-validation": "3.0.0",
     "bitcoinjs-lib": "7.0.0-rc.0",
     "crypto-browserify": "3.12.1",
