--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,3 +41,8 @@ hermesEnabled=true
 
 VisionCamera_enableCodeScanner=true
 VisionCamera_disableFrameProcessors=true
+
+# Use this property to enable edge-to-edge display support.
+# This allows your app to draw behind system bars for an immersive UI.
+# Note: Only works with ReactActivity and should not be used with custom Activity.
+edgeToEdgeEnabled=false
