--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@react-native-community/checkbox": "0.5.20",
     "@react-native-community/slider": "5.0.1",
     "@react-native-picker/picker": "2.11.2",
-    "@react-native/assets-registry": "0.77.1",
+    "@react-native/assets-registry": "0.81.1",
     "@react-spring/native": "10.0.3",
     "@react-spring/web": "10.0.3",
     "@sentry/react-native": "7.1.0",
@@ -71,12 +71,12 @@
     "node-libs-react-native": "1.2.1",
     "patch-package": "8.0.0",
     "query-string": "9.3.1",
-    "react": "18.3.1",
+    "react": "19.1.1",
     "react-device-detect": "2.2.3",
-    "react-dom": "18.3.1",
+    "react-dom": "19.1.1",
     "react-hook-form": "7.63.0",
     "react-i18next": "15.7.3",
-    "react-native": "0.77.2",
+    "react-native": "0.81.4",
     "react-native-animated-linear-gradient": "1.3.0",
     "react-native-barcode-zxing-scan": "1.0.2",
     "react-native-bars": "2.4.3",
@@ -138,7 +138,7 @@
     ]
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "devDependencies": {
     "@babel/core": "7.28.4",
@@ -154,9 +154,9 @@
     "@react-native-community/cli-platform-android": "20.0.2",
     "@react-native-community/cli-platform-ios": "20.0.2",
     "@react-native-community/eslint-config": "3.2.0",
-    "@react-native/babel-preset": "0.77.2",
-    "@react-native/eslint-config": "0.77.2",
-    "@react-native/metro-config": "0.77.2",
+    "@react-native/babel-preset": "0.81.1",
+    "@react-native/eslint-config": "0.81.1",
+    "@react-native/metro-config": "0.79.0-rc.1",
     "@react-native/typescript-config": "0.77.2",
     "@svgr/webpack": "8.1.0",
     "@tsconfig/react-native": "3.0.7",
