--- a/package.json
+++ b/package.json
@@ -156,8 +156,8 @@
     "@react-native-community/eslint-config": "3.2.0",
     "@react-native/babel-preset": "0.81.1",
     "@react-native/eslint-config": "0.81.1",
-    "@react-native/metro-config": "0.79.0-rc.1",
-    "@react-native/typescript-config": "0.77.2",
+    "@react-native/metro-config": "0.81.1",
+    "@react-native/typescript-config": "0.81.1",
     "@svgr/webpack": "8.1.0",
     "@tsconfig/react-native": "3.0.7",
     "@types/bcryptjs": "3.0.0",
@@ -199,6 +199,7 @@
     "react-native-svg-transformer": "1.5.1",
     "style-loader": "4.0.0",
     "ts-essentials": "10.1.1",
+    "ts-node": "10.9.2",
     "tsconfig-paths-webpack-plugin": "4.2.0",
     "typescript": "5.9.2",
     "typescript-plugin-styled-components": "3.0.0",
