--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@react-native/assets-registry": "0.81.1",
     "@react-spring/native": "10.0.3",
     "@react-spring/web": "10.0.3",
-    "@sentry/react-native": "7.1.0",
+    "@sentry/react-native": "6.19.0",
     "@sentry/webpack-plugin": "4.3.0",
     "@trezor/connect-web": "9.6.3",
     "@yudiel/react-qr-scanner": "2.1.0",
@@ -71,9 +71,9 @@
     "node-libs-react-native": "1.2.1",
     "patch-package": "8.0.0",
     "query-string": "9.3.1",
-    "react": "19.1.1",
+    "react": "19.1.0",
     "react-device-detect": "2.2.3",
-    "react-dom": "19.1.1",
+    "react-dom": "19.1.0",
     "react-hook-form": "7.63.0",
     "react-i18next": "15.7.3",
     "react-native": "0.81.4",
@@ -110,7 +110,6 @@
     "react-native-toast-notifications": "3.4.0",
     "react-native-use-keyboard": "1.1.0",
     "react-native-video": "6.16.1",
-    "react-native-vision-camera": "4.7.2",
     "react-native-web": "0.21.1",
     "react-native-web-linear-gradient": "1.1.2",
     "react-native-webview": "13.16.0",
@@ -120,6 +119,7 @@
     "react-use-websocket": "4.13.0",
     "stream-browserify": "3.0.0",
     "styled-components": "6.1.19",
+    "text-encoding-polyfill": "^0.6.7",
     "use-previous": "1.2.0",
     "uuid": "13.0.0",
     "vm-browserify": "1.1.2",
