--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,2 @@
 [build]
-  ignore = "[[ $(git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF .env) && ( $(! git describe --exact-match --tags HEAD) || $PULL_REQUEST == true ) ]]"
+  ignore = "[ \"$BRANCH\" = \"translations\" ] || [[ $(git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF .env) && ( $(! git describe --exact-match --tags HEAD) || $PULL_REQUEST == true ) ]]"
